# ros2_ws

./: .gitignore  NIGHT_OPS_MANIFEST.md  SCENARIO_2_BEHAVIOR.md
Ressources/: ._ARCHITECTURE_SUMMARY.md  ._Documentation_mentor.md  ._README_ARCHITECTURE.md  ._Tech_lead_role_no_agents.md  ._deroule_hackathon.md  ARCHITECTURE_SUMMARY.md  Documentation_mentor.md  EXECUTION_GUIDE.md  IMPLEMENTATION_ARCHITECTURE_PLAN.md  IMPLEMENTATION_ARCHITECTURE_PLAN_PART2.md  QUICK_START.md  README_ARCHITECTURE.md  START_HERE.md  Tech_lead_role_no_agents.md  deroule_hackathon.md
agents/scenario_1/: Agent_1.md  Agent_2.md  Agent_3.md  Agent_4.md
agents/scenario_2/: Agent_1.md  Agent_2.md  Agent_3.md  Agent_4.md
agents/scenario_3/: Agent_1.md  Agent_2.md  Agent_3.md  Agent_4.md
agents/scenario_4/: Agent_1.md  Agent_2.md  Agent_3.md  Agent_4.md
src/crazyswarm2/crazyflie/config/: crazyflies.yaml
src/crazyswarm2/crazyflie_examples/: setup.cfg
src/crazyswarm2/crazyflie_examples/crazyflie_examples/: COVERAGE_SCENARIO_README.md  SCENARIO_3_BEHAVIOR.md  coverage_scenario.py  hackathon_scenario_1.py  hackathon_scenario_2.py  hackathon_scenario_3.py  swarm_waypoints.py
src/crazyswarm2/crazyflie_interfaces/: CMakeLists.txt
src/crazyswarm2/crazyflie_interfaces/msg/: DroneStatus.msg
